@@ -209,5 +209,20 @@ class TestEnumWindowsFamily(unittest.TestCase):
                     )
 
 
+class TestWindowProperties(unittest.TestCase):
+    def setUp(self):
+        self.class_functions = (
+            win32gui.GetClassName,
+            win32gui.RealGetWindowClass,
+        )
+
+    def test_classname(self):
+        for func in self.class_functions:
+            self.assertRaises(pywintypes.error, func, 0)
+        wnd = win32gui.GetDesktopWindow()
+        for func in self.class_functions:
+            self.assertTrue(func(wnd))
+
+
 if __name__ == "__main__":
     unittest.main()
