@@ -15,6 +15,7 @@ Coming in build 307, as yet unreleased
 --------------------------------------
 
 ### pywin32
+* Add RealGetWindowClass (#2299, @CristiFati)
 * Make it compile on Python 3.13 (#2260, @clin1234)
 * Fixed accidentally trying to raise a `str` instead of an `Exception` in (#2270, @Avasam)
   * `Pythonwin/pywin/debugger/debugger.py`
